<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xivo Client</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connected">User connected</string>
    <string name="ok">OK</string>

    <!-- Menu strings -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="exit">Exit</string>

    <!-- Preferences strings -->
    <string name="save_login">Save login / password</string>
    <string name="server_address">Server address</string>
    <string name="server_port">Server port</string>
    <string name="mobile_number">Mobile number</string>
    <string name="use_mobile">Use mobile n° for calls</string>
    <string name="use_mobile_on">Mobile calls</string>
    <string name="use_mobile_off">Default calls</string>
    <string name="mobile_number_used">Use mobile number for calls</string>
    <string name="connection">Connection</string>
    <string name="calling_settings">Calling</string>
    <string name="gui_settings">Look and Feel</string>
    <string name="context">Context</string>
    <string name="use_fullscreen">Enable fullscreen mode</string>
    <string name="include_device_contacts">Include contacts from this device</string>
    <string name="attended_transfer_title">Attended transfer</string>
    <string name="blind_transfer_title">Blind transfer</string>
    <string name="hangup">Hang up</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="service_settings_title">Background service</string>
    <string name="service_bandwidth_warning">Will consume ALOT of energy and bandwidth</string>
    <string name="always_connected">Keep the service connected to the server</string>
    <string name="disconnect_failed">Disconnection failed</string>
    <string name="not_available">This function is disabled</string>
    
    <!-- Messages strings -->
    <string name="connection_failed">Connection failed</string>
    <string name="bad_host">Connection failed : bad server or port</string>
    <string name="not_cti_server">Connection failed : not a Xivo CTI server</string>
    <string name="no_web_connection">Connection failed : network unavailable</string>
    <string name="bad_login_password">Connection failed : bad login or password</string>
    <string name="version_mismatch">Connection failed : unsupported Android version</string>
    <string name="cti_not_supported">Connection failed : CTI server not supported</string>
    <string name="connection_ok">Connection ok</string>
    <string name="login_ok">User logged</string>
    <string name="loading">Please wait while loading ...</string>
    <string name="calling_title">Xivo call</string>
    <string name="calling">Sending a call to number %s ...</string>
    <string name="transfering">Transfering the call to %s ...</string>
    <string name="call_ok">The call has been transmitted</string>
    <string name="call_no_phone_number">Impossible call : no phone number available</string>
    <string name="notif_xivo">Xivo is online and working, click here</string>
    <string name="notif_xivo_title">Xivo online</string>
    <string name="forced_disconnect">Forced disconnection</string>
    <string name="no_phone_error">This contact does not have a phone number</string>
    <string name="remote_exception">Exception while communicating with the service</string>
    <string name="authenticating">Authenticating</string>
    <string name="json_exception">Internal error</string>
    <string name="algo_exception">Authentication failed: missing libraries</string>
    <string name="login_ko">Authentication error</string>
    <string name="binding_error">Failed to bind to the service</string>
    <string name="authentication_timeout">Authentication timedout</string>
    <string name="service_not_ready">XiVO service not ready</string>
    <string name="connection_timedout">Connection timed out</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="uninstalled_error">Failed to launch this application. It may be unaccessible from other applications or it may have been uninstalled</string>
    <string name="connection_refused">Connection refused</string>
   
    <!-- Others -->
    <string name="context_action">Action</string>
    <string name="context_action_call">"Call %1$s (%2$s)"</string>
    <string name="context_action_transfer">"Blind transfer %1$s (%2$s)"</string>
    <string name="context_action_atxfer">"Attended transfer %1$s (%2$s)"</string>
    <string name="context_action_call_short">"Call %s"</string>
    <string name="transfer_number">Blind transfer to %1$s</string>
    <string name="atxfer_number">Attended transfer to %1$s</string>
    <string name="context_edit_before_call">Edit (%1$s)</string>
    <string name="back_cancel">Press back to cancel</string>

    <!-- Xlets descriptions
         IMPORTANT : use this file to put label and description
         of your xlet unless it won't be loaded !
     -->
    <string name="xlet_identity_label">identity</string>
    <string name="xlet_identity_desc">Identity</string>
    <string name="xlet_dial_label">dial</string>
    <string name="xlet_dial_desc">Dialer</string>
    <string name="xlet_features_label">features</string>
    <string name="xlet_features_desc">Services</string>
    <string name="xlet_history_label">history</string>
    <string name="xlet_history_desc">Call logs</string>
    <string name="xlet_search_label">search</string>
    <string name="xlet_search_desc">Contacts</string>
    
    <string name="search_hint">Search</string>
    <string name="cancel_label">Cancel</string>
    <string name="call_canceled">Call canceled</string>
    <string name="transfer_canceled">Transfer canceled</string>
    <string name="transfer_hint">Destination</string>
    <string name="transfer_prompt">Enter the number you want to transfer to</string>
    <string name="label_cancel_btn">Cancel</string>
    <string name="unknown_contact_name">Unknown</string>
    <string name="disconnected">(not connected)</string>
    
    <string name="bandwidth_in_label">Data received</string>
    
    <!-- Units -->
    <string name="unknown">Unknown</string>
    <string name="unit_byte">Byte</string>
    <string name="unit_kb">KB</string>
    <string name="unit_mb">MB</string>
    <string name="unit_gb">GB</string>
    <string name="unit_tb">TB</string>
    
    <!-- GUI -->
    <string name="dialer_btn_lbl">Dialer</string>
    <string name="userslist_btn_lbl">User list</string>
    <string name="history_btn_lbl">History</string>
    <string name="service_btn_lbl">Services</string>
    
    <string name="default_hint_longname">Away</string>
    <string name="xivo_phone_type_lbl">XiVO</string>
    <string name="binding">Binding</string>
    <string name="time_unit_seconds">sec</string>
    
    <string name="app_picker_title">Application picker</string>
    <string name="add_menu_title">Add new launcher</string>
    <string name="del_menu_title">Delete launcher</string>
    <string name="launch_menu_title">Launch</string>
    <string name="shortcut_already_present">This shortcut is already present</string>
</resources>
