<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="login_preferencescreen">
  <PreferenceCategory
    android:title="@string/connection">
    <EditTextPreference
      android:key="server_adress"
      android:title="@string/server_address" />
    <EditTextPreference
      android:key="server_port"
      android:title="@string/server_port"
      android:defaultValue="5003"
      android:inputType="number" />
    <EditTextPreference
      android:key="login"
      android:title="@string/login" />
    <EditTextPreference
      android:key="password"
      android:title="@string/password"
      android:inputType="textPassword" />
    <EditTextPreference
      android:key="context"
      android:title="@string/context"
      android:defaultValue="default" />
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/service_settings_title">
    <CheckBoxPreference
      android:key="start_on_boot"
      android:title="@string/start_on_boot"
      android:defaultValue="false"
      android:summary="@string/service_bandwidth_warning" />
    <CheckBoxPreference
      android:key="keep_running"
      android:title="@string/keep_running"
      android:defaultValue="false"
      android:summary="@string/service_bandwidth_warning" />
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/calling_settings">
    <CheckBoxPreference
      android:key="use_mobile_number"
      android:title="@string/use_mobile"
      android:defaultValue="false"
      android:summaryOn="@string/use_mobile_on"
      android:summary="@string/mobile_number_used"
      android:summaryOff="@string/use_mobile_off" />
    <EditTextPreference
      android:key="mobile_number"
      android:title="@string/mobile_number"
      android:defaultValue=""
      android:dependency="use_mobile_number"
      android:inputType="phone" />
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/gui_settings">
    <CheckBoxPreference
      android:key="use_fullscreen"
      android:title="@string/use_fullscreen"
      android:defaultValue="false" />
  </PreferenceCategory>
</PreferenceScreen>