<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item android:id="@+id/menu_blind_transfer"
	android:title="@string/blind_transfer_title"
	android:icon="@drawable/ic_menu_blocked_user"/>
<item android:id="@+id/menu_attended_transfer"
	android:title="@string/attended_transfer_title"
	android:icon="@drawable/ic_menu_cc"/>
<item android:id="@+id/menu_settings"
      android:icon="@drawable/settings"
      android:title="@string/settings"/>
<item android:id="@+id/menu_about" 
      android:icon="@drawable/flag"
      android:title="@string/about"/>
<item android:id="@+id/menu_disconnect" 
      android:icon="@drawable/flash"
      android:title="@string/disconnect"/>
<item android:id="@+id/menu_exit" 
      android:icon="@drawable/exit"
      android:title="@string/exit"/>

</menu>
